Fixed inventory prices spacing.

--- a/src/components/selected-item-summary/item/SelectedItemSummaryComponent.css
+++ b/src/components/selected-item-summary/item/SelectedItemSummaryComponent.css
@@ -42,6 +42,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
+  height: 2rem;
 }
 
 .selected-item-summary-right-unit-price {
